# mithwire-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  STRATEGY.md  pyproject.toml  release-please-config.json
.cursor/skills/mithwire-mcp-dev-flow/: SKILL.md
.cursor/skills/mithwire-mcp-dev-flow/scripts/: _mcpjson.py  prune-dev-mcps.py  register-dev-mcp.py  reload-mcp.py  unregister-dev-mcp.py
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: architecture.md
mcp/: mithwire-mcp.example.json  nodriver-reforged-browser-mcp.example.json  nodriver-reforged-mcp.example.json
mithwire_mcp/: __init__.py  actions.py  browser.py  cloakbrowser_adapter.py  cookies.py  fingerprint.py  fingerprint_gen.py  local_proxy.py  migrate.py  proxy.py  proxy_health.py  runtime.py  server.py  state_store.py  virtual_display.py  warmup.py  warmup_sites.json
mithwire_mcp/dashboard/: app.py  auth.py  routes.py
mithwire_mcp/dashboard/static/: index.html
nodriver_reforged_browser_mcp/: __init__.py  actions.py  browser.py  proxy.py  proxy_health.py  runtime.py  server.py  state_store.py
nodriver_reforged_browser_mcp/dashboard/: app.py  auth.py
nodriver_reforged_mcp/: __init__.py  actions.py  browser.py  cookies.py  proxy.py  proxy_health.py  runtime.py  server.py  state_store.py
nodriver_reforged_mcp/dashboard/: __init__.py  app.py  events.py  routes.py
nodriver_reforged_mcp/dashboard/static/: index.html
scripts/: SITE_PARSING.md  baseline_probe.py  browserleaks_probes.py  captcha_probes.py  detection_probes.py  profile_matrix.py  verify_mcp.py
skills/nodriver-reforged-browser-mcp-usage/: SKILL.md
tests/: test_actions.py  test_align_timezone_retry.py  test_browser.py  test_cookies_default_dir.py  test_dashboard_routes.py  test_engine_connect_retry.py  test_fingerprint_application.py  test_fingerprint_consistency.py  test_migrate_command.py  test_migration.py  test_profile_architecture.py  test_profile_matrix_gates.py  test_proxy.py  test_proxy_health.py  test_proxy_registry.py  test_runtime.py  test_runtime_proxy_preflight.py  test_server_parser.py  test_state_store.py  test_warmup.py
tests/profiles/: linux-de.json  linux-uk.json  linux-us.json  mac-de.json  mac-jp.json  mac-uk.json  mac-us.json
