[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nodriver-reforged-mcp"
version = "0.1.0"
description = "MCP browser bridge that gives AI clients full access to a live browser environment."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "codeisalifestyle" }]
dependencies = [
  "mcp>=1.26.0,<2",
  "nodriver-reforged>=0.50,<0.60",
  "opencv-python>=4.8,<5",
]

[project.scripts]
nodriver-reforged-mcp = "nodriver_reforged_mcp.server:main"

# Multi-repo development: when iterating on the engine alongside this MCP,
# clone the engine next to this repo and uncomment the override below. uv
# will pick up the local checkout instead of pulling from PyPI. `uv build`
# strips this section so it never reaches the published wheel.
#
# [tool.uv.sources]
# nodriver-reforged = { path = "../nodriver-reforged", editable = true }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["nodriver_reforged_mcp*"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
  "E501",   # line length is enforced by the formatter, not the linter
  "B008",   # FastMCP-style decorators use call-in-default patterns
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
