[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nodriver-reforged-mcp"
version = "0.1.0"
description = "MCP browser bridge that gives AI clients full access to a live browser environment."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "codeisalifestyle" }]
dependencies = [
  "mcp>=1.26.0,<2",
  "nodriver-reforged>=0.50,<0.60",
  "opencv-python>=4.8,<5",
]

[project.scripts]
nodriver-reforged-mcp = "nodriver_reforged_mcp.server:main"

# Multi-repo development: while the engine is unpublished (or when you're
# iterating on both layers at once), uv pulls the engine from the sibling
# checkout below. `uv build` strips [tool.uv.sources] so this never reaches
# the published wheel — it only affects local development. Comment the
# block out (or delete it) once `nodriver-reforged` is on PyPI and you no
# longer want a local override.
[tool.uv.sources]
nodriver-reforged = { path = "../nodriver-reforged", editable = true }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["nodriver_reforged_mcp*"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
  "E501",   # line length is enforced by the formatter, not the linter
  "B008",   # FastMCP-style decorators use call-in-default patterns
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "stealth_e2e: spawns a real Chrome (slow; needs google-chrome/chromium). Run explicitly with -m stealth_e2e or skip with -m 'not stealth_e2e'.",
]
